Microservices/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: ecommerce.local
      http:
        paths:
          - pathType: Prefix
            path: /api/users(/|$)(.*)
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/products(/|$)(.*)
            backend:
              service:
                name: product-service
                port:
                  number: 3001
          - pathType: Prefix
            path: /api/orders(/|$)(.*)
            backend:
              service:
                name: order-service
                port:
                  number: 3002
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: gateway-service
                port:
                  number: 3003
